--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,6 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '13.0'
 
-# Ensure this points to the root Flutter directory
-flutter_application_path = '../'  
-load File.join(flutter_application_path, '.ios', 'Flutter', 'podhelper.rb')
-
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -35,7 +31,10 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-  flutter_install_all_ios_pods(flutter_application_path)
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  
+  pod 'Firebase/Core'
+  pod 'Firebase/Auth'
 
   target 'RunnerTests' do
     inherit! :search_paths
@@ -46,7 +45,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
-
+    
     # Workaround for Xcode 12.5 and newer when dealing with 'IPHONEOS_DEPLOYMENT_TARGET' warning
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
