--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8 # Cupertino icons for iOS
   intl: ^0.17.0
   google_generative_ai: ^0.4.6
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
   
 dev_dependencies:
   flutter_test:
