--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-OPENAI_API_KEY=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
+# Geoapify API Key
+GEOAPIFY_API_KEY=61b4aa1e77674b8e89f7e60d2ce89847
+
+# Gemini API Key
+GEMINI_API_KEY=AIzaSyBiW3vNe8BwYVw38KZl-i6SrTpZKcxZsTM
